rust/macros/tests/invalid/target/debug/deps/missing_argument-851f0637f1e7aa3d.d
/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/missing_argument-851f0637f1e7aa3d.d: missing_argument.rs Cargo.toml

/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/libmissing_argument-851f0637f1e7aa3d.rmeta: missing_argument.rs Cargo.toml

missing_argument.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
